changed the css format

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 fxFlex 
 fxLayout="column" 
 fxLayoutAlign="space-around stretch"
-fxLayoutGap="5px" style="background: red"
+fxLayoutGap="5px" style="background: rgb(49, 48, 48)"
 fxFill>
 
 <div fxFlex='15%'>
