--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,61 +5,12 @@
 
 }
 
-.toolbar img {
-    margin: 0 0px;
+.page-heading {
+    color: orange;
+    font-style: bold;
+    font-size: 20;
+    text-align: left;
+    margin:1;
 }
 
-
-.toolbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-  }
-
-  .content {
-    display: flex;
-    margin: 20px auto 32px;
-    padding: 0 16px;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .container {
-    margin: 10px;
-  }
-  
-  .item {
-    border-radius: .2em;
-    color: #ffffff;
-    font-family: sans-serif;
-    font-size: 2em;
-    padding: 4em 1em;
-    text-transform: uppercase;
-  }
-  
-  .item-1 {
-    background-color: #009169;
-  }
-  
-  .item-2 {
-    background-color: #55b296;
-  }
-  
-  .item-3 {
-    background-color: #9fd3c3;
-  }
-  
-  .item-4 {
-    background-color: #e7b013;
-  }
-  
-  .item-5 {
-    background-color: #073443;
-  }
+ 
